--- a/css/style.css
+++ b/css/style.css
@@ -2,27 +2,236 @@
   font-family: OpenSans-Regular;
   font-weight: 400;
   font-style: normal;
-  src: url(https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Regular.woff)
-    format("woff");
+  font-display: swap;
+  src: url("./fonts/OpenSans-Regular.woff2") format("woff2");
 }
 
 @font-face {
   font-family: OpenSans-Bold;
-  font-weight: 400;
+  font-weight: 700;
   font-style: normal;
-  src: url(https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff)
-    format("woff");
+  font-display: swap;
+  src: url("./fonts/OpenSans-Bold.woff2") format("woff2");
 }
 
-* {
+/*------------ normalize, reset styles ------------*/
+
+html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
   margin: 0;
+}
+
+main {
+  display: block;
+}
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+pre {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+a {
+  background-color: transparent;
+  text-decoration: none;
+  color: var(--color-black);
+}
+
+ul {
+  list-style: none;
+}
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted;
+}
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+img {
+  border-style: none;
+  display: block;
+  max-width: 100%;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button,
+input {
+  overflow: visible;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
   padding: 0;
 }
 
-.container-wrapper {
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type="search"] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+
+details {
+  display: block;
+}
+
+summary {
+  display: list-item;
+}
+
+template {
+  display: none;
+}
+
+[hidden] {
+  display: none;
+}
+
+/*------------ variables ------------*/
+
+:root {
+  --color-white: #fff; /* rgb(255, 255, 255) */
+  --color-black: #000;  /* rgb(0, 0, 0) */
+  --color-gold: #b59f5b; /* rgb(181, 159, 91) */
+  --color-gray: #989898;  /* rgb(152, 152, 152) */
+  --color-gold-light: #e1d9bd;  /* rgb(225, 217, 189) */
+  --color-gray-light: #eeeeee;  /* rgb(238, 238, 238) */
+  --color-gray-dark: #999999;  /* rgb(153, 153, 153) */
+  --color-mint-cream: #f4f7f6;  /* rgb(244, 247, 246) */
+
+  --font-weight-regular: 400;
+  --font-weight-bold: 700;
+
+  --border-radius: 5px;
+
+  --transition-duration: 0.2s;
+
+  --margin-inline: min(122px, 10%);
+}
+
+/*------------ common styles ------------*/
+
+.wrapper {
   max-width: 1170px;
-  margin: 0 auto;
-  padding: 0 15px;
+  margin-inline: auto;
+  padding-inline: 15px;
 }
 
 a {
@@ -44,9 +253,9 @@ ul {
   overflow: hidden;
 }
 
-/*▩▩▩▩▩▩▩▩▩▩ HEADER ▩▩▩▩▩▩▩▩▩▩*/
+/*------------ HEADER ------------*/
 
-/*===image background===*/
+/*-- background --*/
 
 .header__background-image {
   background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/banner-bg.jpg");
@@ -71,7 +280,7 @@ ul {
   z-index: -1;
 }
 
-/*===header logo===*/
+/*-- logo --*/
 
 .header__logo img {
   width: 179px;
@@ -83,10 +292,9 @@ ul {
   justify-content: space-between;
   align-items: center;
   padding-top: 28px;
-
 }
 
-/*===menu===*/
+/*-- menu --*/
 
 .header__nav ul {
   display: flex;
@@ -94,7 +302,7 @@ ul {
 }
 
 .header__nav ul li a {
-  font-family: OpenSans-Regular, Arial, serif;
+  font-family: OpenSans-Regular, sans-serif;
   color: rgb(255, 255, 255);
   font-size: 13px;
   text-transform: uppercase;
@@ -104,7 +312,7 @@ ul {
   text-decoration: underline;
 }
 
-/*===header title===*/
+/*-- title --*/
 
 .header__title_h1 {
   box-sizing: border-box;
@@ -119,7 +327,7 @@ ul {
   line-height: 75px;
 }
 
-/*▩▩▩▩▩▩▩▩▩▩ NEWS SECTION ▩▩▩▩▩▩▩▩▩▩*/
+/*------------ MAIN ------------*/
 
 .main {
   display: flex;
@@ -142,7 +350,7 @@ ul {
 .main__post-info {
   display: flex;
   flex-direction: column;
-  max-width: 367px;  
+  max-width: 367px;
 }
 
 .main__post-sign {
@@ -231,15 +439,14 @@ p + p {
 
 .main__post-description p:not(:nth-of-type(1)):not(.paragraph-2) {
   padding-top: 37px;
-} 
+}
 
-/*▩▩▩▩▩▩▩▩▩▩ SIDEBAR ▩▩▩▩▩▩▩▩▩▩*/
+/*------------ ASIDE ------------*/
 
 .aside {
   display: flex;
   flex-direction: column;
   max-width: 272px;
-  
 }
 
 .aside__title_h2 {
@@ -250,7 +457,6 @@ p + p {
   text-transform: uppercase;
   margin-top: -2px;
   padding-left: 12px;
-
 }
 
 .aside__title_h2:after {
@@ -317,7 +523,7 @@ p + p {
   color: rgb(181, 159, 91);
 }
 
-/*===search form===*/
+/*-- search form --*/
 
 .search {
   display: flex;
@@ -354,7 +560,7 @@ p + p {
   background-size: 18px 18px;
 }
 
-/*===mailing form===*/
+/*-- email --*/
 
 .aside__title-mailing {
   padding-right: 10px;
@@ -393,7 +599,7 @@ p + p {
   background: rgb(0, 0, 0);
 }
 
-/*===side tags===*/
+/*-- tags --*/
 
 .aside__tags {
   display: block;
@@ -451,7 +657,7 @@ p + p {
   border: 3px solid rgb(181, 159, 91);
 }
 
-/*===side themes===*/
+/*-- themes --*/
 
 .aside__themes_h2 {
   display: block;
@@ -513,9 +719,9 @@ p + p {
   padding: 4px 0 0 4px;
 }
 
-/*▩▩▩▩▩▩▩▩▩▩ FOOTER ▩▩▩▩▩▩▩▩▩▩*/
+/*------------ FOOTER ------------*/
 
-/*===social icons===*/
+/*-- icons --*/
 
 .footer {
   margin-top: 62px;
@@ -546,7 +752,7 @@ p + p {
   padding-left: 5px;
 }
 
-/*===copirights===*/
+/*-- copyrights --*/
 
 .footer__copyright {
   display: flex;
