--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: OpenSans-Regular;
+  font-family: 'OpenSans-Regular';
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  src: url("./fonts/OpenSans-Regular.woff2") format("woff2");
+  src: url('/fonts/OpenSans-Regular.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: OpenSans-Bold;
+  font-family: 'OpenSans-Bold';
   font-weight: 700;
   font-style: normal;
   font-display: swap;
-  src: url("./fonts/OpenSans-Bold.woff2") format("woff2");
+  src: url('/fonts/OpenSans-Bold.woff2') format('woff2');
 }
 
 /*------------ normalize, reset styles ------------*/
@@ -19,6 +19,7 @@
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
+  font-size: 62.5%;
 }
 
 body {
@@ -29,22 +30,6 @@ main {
   display: block;
 }
 
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-}
-
-pre {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
 a {
   background-color: transparent;
   text-decoration: none;
@@ -53,44 +38,6 @@ a {
 
 ul {
   list-style: none;
-}
-
-abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  text-decoration: underline dotted;
-}
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
-small {
-  font-size: 80%;
-}
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
 }
 
 img {
@@ -146,19 +93,6 @@ fieldset {
   padding: 0.35em 0.75em 0.625em;
 }
 
-legend {
-  box-sizing: border-box;
-  color: inherit;
-  display: table;
-  max-width: 100%;
-  padding: 0;
-  white-space: normal;
-}
-
-progress {
-  vertical-align: baseline;
-}
-
 textarea {
   overflow: auto;
 }
@@ -188,18 +122,6 @@ textarea {
   font: inherit;
 }
 
-details {
-  display: block;
-}
-
-summary {
-  display: list-item;
-}
-
-template {
-  display: none;
-}
-
 [hidden] {
   display: none;
 }
@@ -213,20 +135,31 @@ template {
   --color-gray: #989898;  /* rgb(152, 152, 152) */
   --color-gold-light: #e1d9bd;  /* rgb(225, 217, 189) */
   --color-gray-light: #eeeeee;  /* rgb(238, 238, 238) */
-  --color-gray-dark: #999999;  /* rgb(153, 153, 153) */
   --color-mint-cream: #f4f7f6;  /* rgb(244, 247, 246) */
 
-  --font-weight-regular: 400;
-  --font-weight-bold: 700;
+  --font-family-regular: 'OpenSans-Regular', sans-serif;
+  --font-family-bold: 'OpenSans-Bold', sans-serif;
 
-  --border-radius: 5px;
+  --font-size-header-title: 4.5rem;
+  --font-size-title: 2rem;
+  --font-size-trands-title: 1.8rem;
+  --font-size-text-p: 1.5rem;
+  --font-size-tags-aside: 1.4rem;
+  --font-size-nav-aside: 1.3rem;
+  --font-size-small: 1.2rem;
 
-  --transition-duration: 0.2s;
+  --transition-duration: .3s;
 
-  --margin-inline: min(122px, 10%);
+  /* var(--font-size-trands-title) */
 }
 
-/*------------ common styles ------------*/
+                      /* common styles */
+
+body {
+  font-family: var(--font-family-regular);
+  color: var(--color-black);
+  background: var(--color-white);
+}
 
 .wrapper {
   max-width: 1170px;
@@ -234,12 +167,9 @@ template {
   padding-inline: 15px;
 }
 
-a {
-  text-decoration: none;
-}
-
-ul {
-  list-style: none;
+p {
+  font-size: var(--font-size-text-p);
+  line-height: 2.2rem;
 }
 
 .visually-hidden {
@@ -258,26 +188,26 @@ ul {
 /*-- background --*/
 
 .header__background-image {
-  background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/banner-bg.jpg");
+  background-image: url("/img/banner-bg.jpg");
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--color-white);
   position: relative;
   z-index: 0;
   min-height: 449px;
-}
 
-.header__background-image:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgb(0, 0, 0);
-  opacity: 0.6;
-  z-index: -1;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--color-black);
+    opacity: 0.6;
+    z-index: -1;
+  }
 }
 
 /*-- logo --*/
@@ -302,14 +232,14 @@ ul {
 }
 
 .header__nav ul li a {
-  font-family: OpenSans-Regular, sans-serif;
-  color: rgb(255, 255, 255);
-  font-size: 13px;
+  color: var(--color-white);
+  font-size: var(--font-size-nav-aside);
   text-transform: uppercase;
-}
 
-.header__nav ul li a:hover {
-  text-decoration: underline;
+  &:hover {
+    text-decoration: underline;
+    transition-duration: var(--transition-duration);
+  }
 }
 
 /*-- title --*/
@@ -319,12 +249,101 @@ ul {
   max-width: 690px;
   margin: 100px auto 0;
 
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 45px;
-  color: rgb(255, 255, 255);
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-header-title);
+  color: var(--color-white);
   text-align: center;
   text-transform: uppercase;
-  line-height: 75px;
+  line-height: 7.5rem;
+}
+
+/*------------ TRANDS ------------*/
+
+.trands__title {
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-title);
+  text-transform: uppercase;
+  text-align: center;
+
+  &::after {
+    content: "";
+    display: flex;
+    width: 66px;
+    margin: 10px auto 0px;
+    border-bottom: 3px solid var(--color-gold-light);
+  }
+}
+
+.trands__cards {
+  display: flex;
+  gap: 4px;
+}
+
+.trands__card-item {
+  position: relative;
+  width: 25%; 
+}
+
+.trands__card-preview {
+  /* display: block;  */
+  width: 100%;  
+  height: auto;
+  filter: brightness(40%);
+}
+
+.trands__card-content {
+  box-sizing: border-box;
+  position: absolute;
+  /* top: 10; */
+  bottom: 0; 
+  left: 0;   
+  right: 0; 
+
+  border: 3px solid var(--color-gold);
+  padding-block: 28px;
+  padding-inline: 33px;
+  margin-inline: 22px;
+  margin-bottom: 16px;
+}
+
+.trands__card-tags {
+  /* display: flex; */
+}
+
+.trands__card-title {
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-trands-title);
+  margin: 0;
+  padding-block: 10px 14px;
+  text-transform: uppercase;
+  color: var(--color-white);
+
+  &:hover {
+    color: var(--color-gold);
+    transition-duration: var(--transition-duration);
+    cursor: pointer;
+  }
+}
+
+.trands__card-tags ul {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  gap: 20px;
+}
+
+.trands__card-tags ul li a {
+  /* display: inline; */
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-tags-aside);
+  color: var(--color-gold);
+  text-transform: uppercase;
+
+  &:hover {
+    text-decoration: underline;
+    transition-duration: var(--transition-duration);
+  }
 }
 
 /*------------ MAIN ------------*/
@@ -369,8 +388,7 @@ ul {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  padding: 0 0 0 2px;
-  line-height: 1;
+  padding-left: 2px;
 }
 
 .main__post-tags ul li {
@@ -379,66 +397,60 @@ ul {
 }
 
 .main__post-tags ul li a {
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 14px;
-  color: rgb(181, 159, 91);
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-tags-aside);
+  color: var(--color-gold);
   text-transform: uppercase;
-}
 
-.main__post-tags ul li a:hover {
-  text-decoration: underline;
+  &:hover {
+    text-decoration: underline;
+    transition-duration: var(--transition-duration);
+  }
 }
 
 .main__post-title_h2 {
   display: block;
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 20px;
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-title);
   text-transform: uppercase;
   line-height: 1.2;
   padding: 0 20px 16px 0;
 }
 
 .main__post-title_h2 a {
-  color: rgb(0, 0, 0);
-}
+  color: var(--color-black);
 
-.main__post-title_h2 a:hover {
-  color: rgb(181, 159, 91);
+  &:hover {
+    color: var(--color-gold);
+    transition-duration: var(--transition-duration);
+  }
 }
 
 .main__post-author {
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 12px;
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-small);
   font-style: normal;
   padding-left: 2px;
 }
 
 .main__post-date {
-  font-family: OpenSans-Regular, Arial, serif;
-  font-size: 12px;
-  color: rgb(152, 152, 152);
-  line-height: 40px;
+  font-size: var(--font-size-small);
+  color: var(--color-gray);
+  line-height: 4rem;
   padding-right: 6px;
 }
 
-p + p {
-  font-family: OpenSans-Regular, Arial, serif;
-  font-size: 15px;
-  line-height: 22px;
-  word-wrap: break-word;
-  padding-top: 10px;
-}
 
 .main__post-description p:not(.paragraph-2) {
-  font-family: OpenSans-Regular, Arial, serif;
-  font-size: 15px;
-  line-height: 22px;
-  word-wrap: break-word;
   padding-top: 33px;
 }
 
 .main__post-description p:not(:nth-of-type(1)):not(.paragraph-2) {
   padding-top: 37px;
+}
+
+p + p {
+  padding-top: 10px;
 }
 
 /*------------ ASIDE ------------*/
@@ -452,19 +464,19 @@ p + p {
 .aside__title_h2 {
   display: block;
   text-align: center;
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 14px;
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-tags-aside);
   text-transform: uppercase;
   margin-top: -2px;
   padding-left: 12px;
-}
 
-.aside__title_h2:after {
-  content: "";
-  display: flex;
-  width: 66px;
-  margin: 10px auto 0px;
-  border-bottom: 3px solid rgb(225, 217, 189);
+  &:after {
+    content: "";
+    display: flex;
+    width: 66px;
+    margin: 10px auto 0px;
+    border-bottom: 3px solid var(--color-gold-light);
+  }
 }
 
 .aside__image {
@@ -475,14 +487,18 @@ p + p {
 .aside__new-post {
   display: flex;
   padding-bottom: 15px;
-}
 
-.aside__new-post:first-of-type {
-  margin-top: 27px;
-}
+  &:first-of-type {
+    margin-top: 27px;
+  }
+ 
+  &:last-of-type {
+    margin-bottom: 39px;
+  }
 
-.aside__new-post:last-of-type {
-  margin-bottom: 39px;
+  &:first-of-type h3 {
+    padding: 3px 0 0 2px;
+  }
 }
 
 .aside__preview {
@@ -494,9 +510,8 @@ p + p {
 }
 
 .aside__post-date {
-  font-family: OpenSans-Regular, Arial, serif;
-  font-size: 12px;
-  color: rgb(152, 152, 152);
+  font-size: var(--font-size-small);
+  color: var(--color-gray);
   line-height: 1;
   padding: 0 0 3px 1px;
 }
@@ -504,23 +519,20 @@ p + p {
 .aside__post-title_h3 {
   display: flex;
   align-items: flex-start;
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 14px;
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-tags-aside);
   text-transform: uppercase;
   line-height: 18px;
   padding: 0;
 }
 
-.aside .aside__new-post:first-of-type h3 {
-  padding: 3px 0 0 2px;
-}
-
 .aside__post-title_h3 a {
-  color: rgb(0, 0, 0);
-}
+  color: var(--color-black);
 
-.aside__post-title_h3 a:hover {
-  color: rgb(181, 159, 91);
+  &:hover {
+    color: var(--color-gold);
+    transition-duration: var(--transition-duration);
+  }
 }
 
 /*-- search form --*/
@@ -532,32 +544,36 @@ p + p {
 
 .search-field {
   box-sizing: border-box;
-  padding: 15px 33px 15px 17px;
+  font-size: var(--font-size-nav-aside);
+  padding: 16px 45px 16px 17px;
   margin: 0;
   outline: none;
-  background-color: rgb(244, 247, 246);
-  border: 1px solid rgb(244, 247, 246);
-}
+  background-color: var(--color-mint-cream);
+  border: 1px solid var(--color-mint-cream);
 
-.search-field:focus {
-  border: 1px solid rgb(181, 159, 91);
-  border-right: none;
+  &:focus {
+    border-block: 1px solid var(--color-gold);
+    border-left: 1px solid var(--color-gold);
+    transition-duration: var(--transition-duration);
+  }
 }
 
 .search-button {
   padding: 0 24px;
   border: none;
-  background: rgb(181, 159, 91)
-    url("https://netology-code.github.io/html-2-diploma/sources/images/search.svg")
+  background: var(--color-gold)
+    url("/svg/search.svg")
     center no-repeat;
   background-size: 18px 18px;
   cursor: pointer;
-}
-.search-button:hover {
-  background: rgb(0, 0, 0)
-    url("https://netology-code.github.io/html-2-diploma/sources/images/search.svg")
-    center no-repeat;
-  background-size: 18px 18px;
+
+  &:hover {
+    background: var(--color-black)
+      url("/svg/search.svg")
+      center no-repeat;
+    background-size: 18px 18px;
+    transition-duration: var(--transition-duration);
+  }
 }
 
 /*-- email --*/
@@ -574,29 +590,33 @@ p + p {
 
 .email-field {
   box-sizing: border-box;
-  padding: 15px 80px 15px 17px;
+  font-size: var(--font-size-nav-aside);
+  padding: 16px 93px 16px 17px;
   margin-bottom: 17px;
   outline: none;
-  background-color: rgb(244, 247, 246);
-  border: 1px solid rgb(244, 247, 246);
-}
+  background-color: var(--color-mint-cream);
+  border: 1px solid var(--color-mint-cream);
 
-.email-field:focus {
-  border: 1px solid rgb(181, 159, 91);
+  &:focus {
+    border: 1px solid var(--color-gold);
+    transition-duration: var(--transition-duration);
+  }
 }
 
 .email-button {
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 14px;
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-tags-aside);
   text-transform: uppercase;
-  color: rgb(255, 255, 255);
+  color: var(--color-white);
   padding: 15px 40px;
   border: none;
-  background: rgb(181, 159, 91);
+  background: var(--color-gold);
   cursor: pointer;
-}
-.email-button:hover {
-  background: rgb(0, 0, 0);
+
+  &:hover {
+    background: var(--color-black);
+    transition-duration: var(--transition-duration);
+  }
 }
 
 /*-- tags --*/
@@ -604,18 +624,18 @@ p + p {
 .aside__tags {
   display: block;
   text-align: center;
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 14px;
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-tags-aside);
   padding: 0 11px 21px 20px;
   line-height: 1;
-}
 
-.aside__tags:after {
-  content: "";
-  display: flex;
-  width: 66px;
-  margin: 12px auto 0px;
-  border-bottom: 3px solid rgb(225, 217, 189);
+  &:after {
+    content: "";
+    display: flex;
+    width: 66px;
+    margin: 12px auto 0px;
+    border-bottom: 3px solid var(--color-gold-light);
+  }
 }
 
 .aside__tags-list {
@@ -626,35 +646,32 @@ p + p {
 
 .aside__tags-list ul {
   display: flex;
-  -webkit-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  -o-flex-wrap: wrap;
   flex-wrap: wrap;
   gap: 6px;
   padding: 0;
 }
 
 .aside__tags-list ul li a {
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 12px;
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-small);
   text-transform: uppercase;
   line-height: 30px;
-  color: rgb(0, 0, 0);
-  border: 3px solid rgb(238, 238, 238);
+  color: var(--color-black);
+  border: 3px solid var(--color-gray-light);
   padding: 3px 13px 3px 12px;
-}
 
-.aside__tags-list ul li:nth-of-type(2) a {
-  padding: 3px 17px 3px 13px;
-}
+  &:nth-child(2) a {
+    padding: 3px 17px 3px 13px;
+  }
 
-.aside__tags-list ul li:nth-of-type(5) a {
-  padding: 3px 13px 3px 14px;
-}
+  &:nth-child(5) a {
+    padding: 3px 13px 3px 14px;
+  }
 
-.aside__tags-list ul li:nth-child(n) :hover {
-  border: 3px solid rgb(181, 159, 91);
+  &:hover {
+    border: 3px solid var(--color-gold);
+    transition-duration: var(--transition-duration);
+  }
 }
 
 /*-- themes --*/
@@ -662,18 +679,18 @@ p + p {
 .aside__themes_h2 {
   display: block;
   text-align: center;
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 14px;
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-tags-aside);
   padding: 0 11px 10px 23px;
   line-height: 1;
-}
 
-.aside__themes_h2:after {
-  content: "";
-  display: flex;
-  width: 66px;
-  margin: 12px auto 0px;
-  border-bottom: 3px solid rgb(225, 217, 189);
+  &:after {
+    content: "";
+    display: flex;
+    width: 66px;
+    margin: 12px auto 0px;
+    border-bottom: 3px solid var(--color-gold-light);
+  }
 }
 
 .aside__themes-list {
@@ -684,37 +701,38 @@ p + p {
   display: flex;
   position: relative;
   padding: 0 0 0 5px;
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 14px;
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-tags-aside);
   line-height: 47px;
-}
 
-.aside__themes-list ul li:after {
-  content: "";
-  display: flex;
-  width: 271px;
-  border-bottom: 1px solid rgb(238, 238, 238);
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  &:after {
+    content: "";
+    display: flex;
+    width: 271px;
+    border-bottom: 1px solid var(--color-gray-light);
+    position: absolute;
+    left: 0;
+    bottom: 0;
+  }
 }
 
 .aside__themes-list ul li a {
   display: flex;
-  color: rgb(0, 0, 0);
+  color: var(--color-black);
   position: relative;
   z-index: 1;
-}
 
-.aside__themes-list ul li a:hover {
-  color: rgb(181, 159, 91);
+  &:hover {
+    color: var(--color-gold);
+    transition-duration: var(--transition-duration);
+  }
 }
 
 .aside__text-decoration {
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 12px;
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-small);
   font-weight: 700;
-  color: rgb(181, 159, 91);
+  color: var(--color-gold);
   line-height: 36.82px;
   padding: 4px 0 0 4px;
 }
@@ -730,7 +748,7 @@ p + p {
 .footer__address {
   display: flex;
   justify-content: center;
-  background-color: rgb(244, 247, 246);
+  background-color: var(--color-mint-cream);
 }
 
 .footer__address ul {
@@ -758,8 +776,8 @@ p + p {
   display: flex;
   justify-content: center;
   padding: 57px 0 41px 8px;
-  font-family: OpenSans-Bold, Arial, serif;
-  font-size: 12px;
-  color: rgb(153, 153, 153);
-  line-height: 40px;
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-small);
+  color: var(--color-gray);
+  line-height: 4rem;
 }
