--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  src: url('/fonts/OpenSans-Regular.woff2') format('woff2');
+  src: url('../fonts/OpenSans-Regular.woff') format('woff');
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-weight: 700;
   font-style: normal;
   font-display: swap;
-  src: url('/fonts/OpenSans-Bold.woff2') format('woff2');
+  src: url('../fonts/OpenSans-Bold.woff') format('woff');
 }
 
 /*------------ normalize, reset styles ------------*/
@@ -550,14 +550,14 @@ p + p {
   padding: 0 24px;
   border: none;
   background: var(--color-gold)
-    url("/svg/search.svg")
+    url(../svg/search.svg)
     center no-repeat;
   background-size: 18px 18px;
   cursor: pointer;
 
   &:hover {
     background: var(--color-black)
-      url("/svg/search.svg")
+      url(../svg/search.svg)
       center no-repeat;
     background-size: 18px 18px;
     transition-duration: var(--transition-duration);
