--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,12 @@ img {
   max-width: 100%;
 }
 
+h2,
+h3,
+h4 {
+  margin: 0;
+}
+
 button,
 input,
 optgroup,
@@ -175,83 +181,8 @@ p {
   overflow: hidden;
 }
 
-/*------------ HEADER ------------*/
-
-/*-- background --*/
-
-.header__background-image {
-  background-image: url(../img/banner-bg.jpg);
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
-  background-color: var(--color-white);
-  position: relative;
-  z-index: 0;
-  min-height: 449px;
-
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: var(--color-black);
-    opacity: 0.6;
-    z-index: -1;
-  }
-}
-
-/*-- logo --*/
-
-.header__logo img {
-  width: 179px;
-  padding-left: 3px;
-}
-
-.header__logo-menu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 28px;
-}
-
-/*-- menu --*/
-
-.header__nav ul {
-  display: flex;
-  gap: 35px;
-}
-
-.header__nav ul li a {
-  color: var(--color-white);
-  font-size: var(--font-size-nav-aside);
-  text-transform: uppercase;
-
-  &:hover {
-    text-decoration: underline;
-    transition-duration: var(--transition-duration);
-  }
-}
-
-/*-- title --*/
-
-.header__title_h1 {
-  box-sizing: border-box;
-  max-width: 690px;
-  margin: 100px auto 0;
-
-  font-family: var(--font-family-bold);
-  font-size: var(--font-size-header-title);
-  color: var(--color-white);
-  text-align: center;
-  text-transform: uppercase;
-  line-height: 7.5rem;
-}
-
-/*------------ TRANDS ------------*/
-
-.trands__title {
+.trands__title, 
+.shop__title {
   font-family: var(--font-family-bold);
   font-size: var(--font-size-title);
   text-transform: uppercase;
@@ -266,43 +197,159 @@ p {
   }
 }
 
+/*------------ HEADER ------------*/
+
+/*-- background --*/
+
+.header__background-image {
+  background-image: url(../img/banner-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
+  background-color: var(--color-white);
+  position: relative;
+  z-index: 0;
+  min-height: 449px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: var(--color-black);
+    opacity: 0.6;
+    z-index: -1;
+  }
+}
+
+/*-- logo --*/
+
+.header__logo {
+  width: 179px;
+  padding-left: 3px;
+}
+
+.header__logo-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 28px;
+}
+
+/*-- menu --*/
+
+.header__nav-list {
+  display: flex;
+  gap: 35px;
+}
+
+.header__nav-items {
+  color: var(--color-white);
+  font-size: var(--font-size-nav-aside);
+  text-transform: uppercase;
+
+  &:hover {
+    text-decoration: underline;
+    transition-duration: var(--transition-duration);
+  }
+}
+
+/*-- title --*/
+
+.header__title-h1 {
+  box-sizing: border-box;
+  max-width: 690px;
+  margin: 102px auto 0;
+
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-header-title);
+  color: var(--color-white);
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 7.5rem;
+}
+
+/*------------ TRANDS ------------*/
+
+.trands {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 59px;
+}
+
 .trands__cards {
   display: flex;
   gap: 4px;
+  margin-top: 28px;
+  
 }
 
 .trands__card-item {
-  position: relative;
   width: 25%; 
+  min-height: 320px;
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: 1;
+  
+
+  &::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: var(--color-black);
+    opacity: 0.6;
+    z-index: -1;
+  }
+}
+
+.trands__item-first {
+  background-image: url(../img/trend1.jpg);
+}
+
+.trands__item-second {
+  background-image: url(../img/trend2.jpg);
+}
+
+.trands__item-thrid {
+  background-image: url(../img/trend3.jpg);
+}
+
+.trands__item-fourth {
+  background-image: url(../img/trend4.jpg);
 }
 
 .trands__card-preview {
-  /* display: block;  */
   width: 100%;  
   height: auto;
-  filter: brightness(40%);
+  
 }
 
 .trands__card-content {
-  box-sizing: border-box;
-  position: absolute;
-  /* top: 10; */
-  bottom: 0; 
-  left: 0;   
-  right: 0; 
-
   border: 3px solid var(--color-gold);
-  padding-block: 28px;
-  padding-inline: 33px;
-  margin-inline: 22px;
+  padding-block: 35px 28px;
+  padding-inline: 29px;
+  margin-inline: 22px 21px;
   margin-bottom: 16px;
+  position: absolute;
+  bottom: 0;
+
+  & .first-title {
+    padding-right: 40px;
+  }
+
+  & .thrid-title,
+    .fourth-title {
+    padding-left: 5px;
+  }
 }
 
 .trands__card-title {
   font-family: var(--font-family-bold);
-  font-size: var(--font-size-trands-title);
+  font-size: var(--font-size-title);
   margin: 0;
-  padding-block: 10px 14px;
+  padding-block: 10px 4px;
   text-transform: uppercase;
   color: var(--color-white);
 
@@ -313,7 +360,7 @@ p {
   }
 }
 
-.trands__card-tags ul {
+.trands__card-list {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -321,7 +368,12 @@ p {
   gap: 20px;
 }
 
-.trands__card-tags ul li a {
+.thrid-tags,
+.fourth-tags {
+  padding-left: 5px;
+}
+
+.trands__tags-item {
   /* display: inline; */
   font-family: var(--font-family-bold);
   font-size: var(--font-size-tags-aside);
@@ -341,13 +393,22 @@ p {
   justify-content: space-between;
   padding-right: 3px;
   margin-top: 62px;
+  margin-bottom: 60px;
 }
 
 .main__post {
   display: flex;
   justify-content: space-between;
   width: 778px;
-  margin-bottom: 54.3px;
+  margin-bottom: 58.5px;
+
+  &:nth-child(n+3) .main__post-desc_item {
+    padding-top: 15px;
+  }
+
+  &:nth-child(n+3) .next-paragraph {
+    padding-top: 0px;
+  }
 }
 
 .main__post:last-of-type {
@@ -372,19 +433,19 @@ p {
   padding-top: 2px;
 }
 
-.main__post-tags ul {
+.main__tags {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
   padding-left: 2px;
 }
 
-.main__post-tags ul li {
+.main__list-tags {
   padding: 0 18px 8px 0;
   margin: 0;
 }
 
-.main__post-tags ul li a {
+.main__tags-item {
   font-family: var(--font-family-bold);
   font-size: var(--font-size-tags-aside);
   color: var(--color-gold);
@@ -396,7 +457,7 @@ p {
   }
 }
 
-.main__post-title_h2 {
+.main__post-title {
   display: block;
   font-family: var(--font-family-bold);
   font-size: var(--font-size-title);
@@ -405,7 +466,7 @@ p {
   padding: 0 20px 16px 0;
 }
 
-.main__post-title_h2 a {
+.main__title-item {
   color: var(--color-black);
 
   &:hover {
@@ -425,20 +486,20 @@ p {
   font-size: var(--font-size-small);
   color: var(--color-gray);
   line-height: 4rem;
-  padding-right: 6px;
+  padding-right: 9px;
 }
 
 
-.main__post-description p:not(.paragraph-2) {
-  padding-top: 33px;
+.main__post-desc_item:not(.next-paragraph) {
+  padding-top: 20px;
 }
 
-.main__post-description p:not(:nth-of-type(1)):not(.paragraph-2) {
+.main__post-desc_item:not(:nth-of-type(1)):not(.next-paragraph) {
   padding-top: 37px;
 }
 
 p + p {
-  padding-top: 10px;
+  margin-top: -5px;
 }
 
 /*------------ ASIDE ------------*/
@@ -449,13 +510,12 @@ p + p {
   max-width: 272px;
 }
 
-.aside__title_h2 {
+.aside__section-title {
   display: block;
   text-align: center;
   font-family: var(--font-family-bold);
   font-size: var(--font-size-tags-aside);
   text-transform: uppercase;
-  margin-top: -2px;
   padding-left: 12px;
 
   &:after {
@@ -474,14 +534,14 @@ p + p {
 
 .aside__new-post {
   display: flex;
-  padding-bottom: 15px;
+  padding-bottom: 21px;
 
   &:first-of-type {
-    margin-top: 27px;
+    margin-top: 30px;
   }
  
   &:last-of-type {
-    margin-bottom: 39px;
+    margin-bottom: 34px;
   }
 
   &:first-of-type h3 {
@@ -501,7 +561,7 @@ p + p {
   font-size: var(--font-size-small);
   color: var(--color-gray);
   line-height: 1;
-  padding: 0 0 3px 1px;
+  padding-right: 3px;
 }
 
 .aside__post-title_h3 {
@@ -533,7 +593,7 @@ p + p {
 .search-field {
   box-sizing: border-box;
   font-size: var(--font-size-nav-aside);
-  padding: 16px 45px 16px 17px;
+  padding: 16px 46px 16px 17px;
   margin: 0;
   outline: none;
   background-color: var(--color-mint-cream);
@@ -580,7 +640,7 @@ p + p {
   box-sizing: border-box;
   font-size: var(--font-size-nav-aside);
   padding: 16px 93px 16px 17px;
-  margin-bottom: 17px;
+  margin-bottom: 19px;
   outline: none;
   background-color: var(--color-mint-cream);
   border: 1px solid var(--color-mint-cream);
@@ -629,7 +689,7 @@ p + p {
 .aside__tags-list {
   display: flex;
   align-content: space-evenly;
-  padding: 25px 0 58px 5px;
+  padding: 15px 0 50px 5px;
 }
 
 .aside__tags-list ul {
@@ -681,14 +741,13 @@ p + p {
   }
 }
 
-.aside__themes-list {
-  padding-top: 9px;
+.themes-list {
+  padding: 0px 5px 0px;
 }
 
-.aside__themes-list ul li {
+.themes-list-item {
   display: flex;
   position: relative;
-  padding: 0 0 0 5px;
   font-family: var(--font-family-bold);
   font-size: var(--font-size-tags-aside);
   line-height: 47px;
@@ -704,7 +763,7 @@ p + p {
   }
 }
 
-.aside__themes-list ul li a {
+.themes-item {
   display: flex;
   color: var(--color-black);
   position: relative;
@@ -725,6 +784,102 @@ p + p {
   padding: 4px 0 0 4px;
 }
 
+/*------------ SHOP ------------*/
+
+.shop {
+  display: flex;
+}
+.shop__cards {
+  display: flex;
+  gap: 111px;
+  margin-top: 30px;
+}
+.shop__selling-item {
+  max-width: 300px;
+  min-height: 440px;
+  position: relative;
+}
+
+.shop__card-item {
+  position:absolute;
+    top: 44%;
+    bottom: 8%; 
+    left: 0;   
+    right: 0; 
+
+    outline: 3px solid var(--color-gold);
+    outline-offset: 21px;
+    height: 220px;
+    
+}
+.shop__card-title {
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-title);
+  color: var(--color-black);
+  text-transform: uppercase;
+  cursor: pointer;
+  margin-block: 30px 5px;
+
+  &:hover {
+    color: var(--color-gold);
+    transition-duration: var(--transition-duration);
+  }
+}
+
+.shop__card-desc {
+  margin: 0px;
+}
+
+.shop__desc-link {
+    color: var(--color-gold);
+  
+    &:hover {
+      text-decoration: underline;
+      transition-duration: var(--transition-duration);
+    }
+}
+.shop__card-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 23px;
+}
+.shop__card-prices {
+  display: flex;
+  flex-direction: column;
+}
+.shop__old-price {
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-tags-aside);
+  text-decoration: line-through;
+}
+.shop__new-price {
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-title);
+}
+
+.new-price {
+  padding-top: 10px;
+}
+
+.shop-button {
+  /* display: flex; */
+  font-family: var(--font-family-bold);
+  font-size: var(--font-size-tags-aside);
+  text-transform: uppercase;
+  border: none;
+  color: var(--color-white);
+  background: var(--color-gold);
+  padding-block: 15px;
+  padding-inline: 28px;
+  cursor: pointer;
+
+  &:hover {
+    background: var(--color-black);
+    transition-duration: var(--transition-duration);
+  }
+}
+
 /*------------ FOOTER ------------*/
 
 /*-- icons --*/
@@ -739,14 +894,14 @@ p + p {
   background-color: var(--color-mint-cream);
 }
 
-.footer__address ul {
+.footer__address-list {
   display: flex;
   margin: 0;
   padding: 0;
   gap: 23px;
 }
 
-.footer__address ul li {
+.footer__address-item {
   display: inline-block;
   text-align: center;
   padding: 30px 0;
@@ -763,9 +918,23 @@ p + p {
 .footer__copyright {
   display: flex;
   justify-content: center;
-  padding: 57px 0 41px 8px;
+  padding: 62px 0 41px 8px;
   font-family: var(--font-family-bold);
   font-size: var(--font-size-small);
   color: var(--color-gray);
   line-height: 4rem;
+}
+
+@media (max-width: 1200px) {
+  .header__background-image {
+    background-image: url(../img/banner-bg-tablet.jpg);
+    background-position: center bottom;
+  }
+}
+
+@media (max-width: 768px) {
+  .header__background-image {
+    background-image: url(../img/banner-mobile.jpg);
+    background-position: center;
+  }
 }
