--- a/css/style.css
+++ b/css/style.css
@@ -1118,7 +1118,7 @@ p + p {
   line-height: 4rem;
 }
 
-@media (max-width: 1200px) and (orientation: landscape) {
+@media (max-width: 1200px) and (orientation: landscape) and (max-height: 900px) {
   .wrapper {
     padding-inline: clamp(5px, 4.5vw, 85px);
   }
