--- a/css/style.css
+++ b/css/style.css
@@ -1118,7 +1118,7 @@ p + p {
   line-height: 4rem;
 }
 
-@media (max-width: 1200px) and (orientation: landscape) and (max-height: 700px) {
+@media (max-width: 1200px) {
   .wrapper {
     padding-inline: clamp(5px, 4.5vw, 85px);
   }
@@ -1240,12 +1240,6 @@ p + p {
     }
   }
 
-  /* pop-up */
-
-  .pop-up__image-form {
-    display: none;
-  }
-
   /* trands */
 
   .trands {
@@ -1270,9 +1264,9 @@ p + p {
 
   .trands__card-content {
     border: 3px solid var(--color-gold);
-    padding-block: 32px 30px;
-    padding-inline: 5px;
-    margin-inline: 5px;
+    padding-block: 15px;
+    padding-inline: 15px;
+    margin-inline: 15px;
     margin-bottom: 16px;
     position: relative;
     display: flex;
@@ -1452,589 +1446,15 @@ p + p {
 }
 
 @media (max-width: 1200px) and (orientation: portrait) {
-  .wrapper {
-    padding-inline: clamp(5px, 4.5vw, 85px);
-  }
-
-  /*-- logo --*/
-
-  .header__logo {
-    width: 160px;
-    padding-left: 0px;
-  }
-
-  .header__logo-menu {
-    padding-top: 42px;
-  }
-
-  .header__title-h1 {
-    max-width: clamp(650px, 65vw, 690px);
-    font-size: clamp(
-      var(--font-size-header-title-tablet),
-      4vw,
-      var(--font-size-header-title)
-    );
-    line-height: clamp(5.5rem, 6vw, 7.5rem);
-    margin: 90px auto 0;
-  }
-
-  .header__background-image {
-    background-image: url(../img/banner-bg-tablet.jpg);
-    background-position: center bottom;
-    min-height: 392px;
-  }
-
-  /* burger menu */
-
-  .header__menu-container {
-    position: relative;
-  }
-
-  .header__nav-list {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 45px;
-    right: 80px;
-    gap: 5px;
-    z-index: 4;
-  }
-
-  .header__burger-menu {
-    display: none;
-  }
-
-  .burger-menu {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 53px;
-    right: 36px;
-    width: 23px;
-    height: 23px;
-    justify-content: space-around;
-    cursor: pointer;
-    z-index: 3;
-  }
-
-  .bar {
-    height: 3px;
-    width: 100%;
-    background-color: var(--color-white);
-    transition: transform 0.3s ease;
-  }
-
-  .header__burger-menu:checked + .burger-menu .bar:nth-child(1) {
-    transform: rotate(45deg) translate(6px, 6px);
-  }
-
-  .header__burger-menu:checked + .burger-menu .bar:nth-child(2) {
-    opacity: 0;
-  }
-
-  .header__burger-menu:checked + .burger-menu .bar:nth-child(3) {
-    transform: rotate(-45deg) translate(5px, -5px);
-  }
-
-  .header__nav {
-    display: none;
-  }
-
-  .header__burger-menu:checked ~ .wrapper .header__nav {
-    display: block;
-  }
-
-  .header__nav-button {
-    background-color: var(--color-black);
-    width: 120px;
-    align-items: flex-end;
-    justify-content: flex-end;
-    padding: 10px 10px;
-    border: 3px solid var(--color-gold);
-
-    &:hover {
-      background-color: var(--color-gold);
-      text-decoration: none;
-      transition-duration: var(--transition-duration);
-    }
-  }
-
-  .header__nav-items {
-    display: block;
-    font-family: var(--font-family-bold);
-    color: var(--color-white);
-    font-size: var(--font-size-trands-title);
-    text-transform: uppercase;
-    height: 100%;
-
-    &:hover {
-      text-decoration: none;
-      transition-duration: var(--transition-duration);
-    }
-  }
-
   /* trands */
-
-  .trands {
-    margin-top: 46px;
-  }
-
-  .trands__title,
-  .shop__title {
-    font-size: var(--font-size-trands-title);
-  }
-
-  .trands__cards {
-    flex-wrap: wrap;
-    margin-top: 20px;
-    gap: 4px;
-  }
-
-  .trands__card-item {
-    display: flex;
-    align-items: flex-end;
-  }
-
-  .trands__card-content {
-    border: 3px solid var(--color-gold);
-    padding-block: 32px 30px;
-    padding-inline: 32px;
-    margin-inline: 20px 17px;
-    margin-bottom: 16px;
-    position: relative;
-    display: flex;
-    width: 100%;
-  }
 
   .trands__card-item {
     width: calc(50% - 4px);
     min-height: 247px;
   }
-
-  .trands__card-list {
-    padding-bottom: 6px;
-  }
-
-  .thrid-tags {
-    padding-left: 0px;
-  }
-
-  .fourth-tags {
-    padding-left: 5px;
-  }
-
-  .trands__card-title {
-    font-size: clamp(
-      var(--font-size-title-tablet),
-      2vw,
-      var(--font-size-title)
-    );
-    line-height: clamp(2.2rem, 2.5vw, 2.4rem);
-  }
-
-  /* main */
-
-  .main {
-    padding-right: 3px;
-    margin-top: 45px;
-    margin-bottom: 45px;
-  }
-
-  .posts {
-    max-width: 650px;
-  }
-
-  .main__post {
-    flex-direction: column;
-    width: 100%;
-    max-width: none;
-    position: relative;
-    margin-bottom: 39.5px;
-
-    &::after {
-      content: "";
-      display: block;
-      width: auto;
-      border-bottom: 3px solid var(--color-gray-light);
-      position: relative;
-      margin-top: 0px;
-    }
-
-    &:nth-child(n + 2) .main__post-desc_item {
-      padding-top: 0px;
-      padding-right: 3px;
-    }
-
-    &:nth-child(5) .main__post-desc_item {
-      padding-right: 5px;
-    }
-  }
-
-  .main__post-image {
-    width: 100%;
-    height: auto;
-    flex-grow: 1;
-    margin-bottom: 16px;
-  }
-
-  .main__post-image img {
-    width: 100%;
-    height: auto;
-  }
-
-  .main__post-info {
-    max-width: none;
-  }
-
-  .main__tags:nth-child(n + 3) {
-    padding-top: 0px;
-  }
-
-  .main__post-title {
-    font-family: var(--font-family-bold);
-    font-size: var(--font-size-title-tablet);
-    line-height: 1.3;
-    padding: 0px 0px 18px 0;
-    margin-right: -3px;
-  }
-
-  .main__post-desc_item:not(.next-paragraph) {
-    padding-top: 0px;
-  }
-
-  .main__post-desc_item:not(:nth-of-type(1)):not(.next-paragraph) {
-    padding-top: 0px;
-  }
-
-  p + p {
-    margin-top: -5px;
-  }
-
-  /* aside */
-
-  .aside {
-    margin-left: 30px;
-  }
-
-  .aside__new-post {
-    &:last-of-type {
-      margin-bottom: 37px;
-    }
-  }
-
-  /* shop */
-
-  .shop__cards {
-    flex-wrap: wrap;
-    gap: 45px 70px;
-    justify-content: flex-start;
-    padding-inline: 20px 10px;
-  }
-
-  .shop__selling-item {
-    width: calc(50% - 40px);
-    min-height: 440px;
-    position: relative;
-  }
-
-  .shop__card-preview {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
-
-  .shop__card-title {
-    font-family: var(--font-family-bold);
-    font-size: var(--font-size-title-tablet);
-    color: var(--color-black);
-    text-transform: uppercase;
-    cursor: pointer;
-    margin-block: 30px 2px;
-  }
-
-  .shop__card-item {
-    outline: 3px solid var(--color-gold);
-    outline-offset: 19px;
-    height: 220px;
-    margin-top: -10px;
-    padding-top: 1px;
-  }
-
-  .shop__thrid-item {
-    height: 195px;
-    margin-top: -20px;
-    padding-top: 10px;
-  }
-
-  /* footer */
-
-  .footer {
-    margin-top: 47px;
-  }
-
-  .footer__copyright {
-    margin: 35px 0 41px 8px;
-  }
 }
 
-@media (max-width: 640px) and (orientation: landscape) {
-  .wrapper {
-    padding-inline: 15px;
-  }
-
-  /*-- logo --*/
-
-  .header__logo {
-    width: 269px;
-    padding-left: 0;
-  }
-
-  /* header */
-
-  .header__logo-menu {
-    justify-content: center;
-    padding-top: 225px;
-  }
-
-  .header__background-image {
-    background-image: url(../img/banner-mobile.jpg);
-    background-position: 70% 70%;
-    min-height: 639px;
-  }
-
-  .header__title-h1 {
-    margin: 35px auto 0;
-    font-family: var(--font-family-bold);
-    font-size: clamp(
-      var(--font-size-header-title-mobile),
-      7vw,
-      var(--font-size-header-title-tablet)
-    );
-    color: var(--color-white);
-    line-height: clamp(3.6rem, 8vw, 5.5rem);
-  }
-
-  .header__nav-list {
-    top: 22px;
-    right: 55px;
-  }
-
-  /* main */
-
-  .main {
-    flex-direction: column;
-    margin-top: 42px;
-    margin-bottom: 34px;
-    justify-content: normal;
-  }
-
-  .main__post {
-    margin-bottom: 34px;
-  }
-
-  .main__post-date {
-    padding-right: 5px;
-  }
-
-  p + p {
-    margin-top: -15px;
-  }
-
-  .main__post-title {
-    font-size: var(--font-size-title-mobile);
-    line-height: 1.2;
-    padding: 0px 0px 5px 0;
-    margin-right: 0px;
-  }
-
-  p {
-    font-size: var(--font-size-tags-aside);
-    line-height: 2.1rem;
-    margin-block: 0px 18px;
-  }
-
-  /* trands */
-
-  .trands {
-    margin-top: 40px;
-  }
-
-  .trands__title,
-  .shop__title {
-    font-size: var(--font-size-title-mobile);
-  }
-
-  .trands__cards {
-    flex-wrap: wrap;
-    margin-top: 25px;
-    gap: 3px;
-  }
-
-  .trands__card-list {
-    padding-bottom: 10px;
-  }
-
-  .fourth-tags {
-    padding-left: 0px;
-  }
-
-  .trands__card-item {
-    width: calc(50% - 4px);
-    min-height: 247px;
-  }
-
-  .trands__card-title {
-    font-size: clamp(
-      var(--font-size-title-mobile),
-      3vw,
-      var(--font-size-title-tablet)
-    );
-    line-height: clamp(2rem, 3.5vw, 2.2rem);
-  }
-
-  .trands__card-content {
-    padding-block: 32px 27px;
-    padding-inline: 20px;
-    margin-inline: 15px 17px;
-    margin-bottom: 16px;
-  }
-
-  /* burger-menu */
-
-  .burger-menu {
-    top: 30px;
-    right: 16px;
-  }
-
-  /* aside */
-
-  .aside {
-    margin-left: 0px;
-    max-width: 100%;
-  }
-
-  .aside__section-title {
-    font-size: var(--font-size-title-mobile);
-    padding-left: 0px;
-    margin-top: 38px;
-  }
-
-  .aside__image {
-    width: 70px;
-    padding: 0 0 3px 0px;
-  }
-
-  .aside__preview {
-    max-width: 100%;
-  }
-
-  .search-field {
-    padding: 15px 111px 16px 15px;
-    width: 100%;
-  }
-
-  .search {
-    padding: 0 0 2px 0px;
-    justify-content: center;
-  }
-
-  .aside__title-mailing {
-    padding-right: 0px;
-  }
-
-  .email-field {
-    width: 100%;
-    padding: 16px 160px 16px 17px;
-    margin-bottom: 17px;
-  }
-
-  .email-button {
-    padding: 16px 0px;
-    width: 100%;
-    max-width: 339px;
-  }
-
-  .email {
-    padding: 24px 0 4px 0px;
-    align-items: center;
-  }
-
-  .aside__tags-list {
-    padding: 15px 0 0px 0px;
-  }
-
-  .title-themes {
-    margin-top: 30px;
-  }
-
-  .themes-list {
-    padding: 0px;
-  }
-
-  .themes-list-item:after {
-    content: "";
-    display: flex;
-    width: 100%;
-    border-bottom: 1px solid var(--color-gray-light);
-    position: absolute;
-    left: 0;
-    bottom: 0;
-  }
-
-  /* shop */
-
-  .shop__cards {
-    flex-wrap: wrap;
-    gap: 45px 70px;
-    justify-content: flex-start;
-    padding-inline: 20px 25px;
-  }
-
-  .shop__selling-item {
-    width: 100%;
-    min-height: 440px;
-    position: relative;
-  }
-
-  .shop__card-item {
-    outline: 3px solid var(--color-gold);
-    outline-offset: 20px;
-    margin-top: -8px;
-    padding-top: 1px;
-  }
-
-  .shop__first-item {
-    height: 174px;
-  }
-
-  .shop__card-desc {
-    font-size: var(--font-size-text-p);
-    line-height: 2.2rem;
-    margin-block: 0px 10px;
-  }
-
-  /* footer */
-
-  .footer {
-    margin-top: 62px;
-  }
-
-  /* pop-up */
-
-  .pop-up__image-form {
-    width: 35px;
-    bottom: 20px;
-    right: 20px;
-
-    &:hover {
-      width: 40px;
-      bottom: 17.5px;
-      right: 17.5px;
-    }
-  }
-}
-
-@media (max-width: 640px) and (orientation: portrait) {
+@media (max-width: 640px) {
   .wrapper {
     padding-inline: 15px;
   }
@@ -2302,5 +1722,20 @@ p + p {
 
   .pop-up__submission {
     padding: 15px 103px;
+  }
+}
+
+@media (max-width: 640px) and (orientation: landscape) {
+  /* trands */
+
+  .trands__card-item {
+    width: calc(50% - 4px);
+    min-height: 247px;
+  }
+
+  /* pop-up */
+
+  .pop-up__image-form {
+    display: none;
   }
 }
